Fixing the about

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class = "menu">
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Hobby</a></li>
                         <li><a href="#">Skill</a></li>
@@ -39,7 +39,7 @@
             <!-- home page -->
             <div class="home" id="home" >
                 <div class="text">
-                    <h1><span>Yo!</span> I'm <br>Minsa</h1>
+                    <h1><span>Hi!</span> I'm <br>Minsa</h1>
                     <div class="primary-btn">
                         <div class="btn-group">
                             <div class="play-btn">
@@ -56,8 +56,25 @@
 
 
             <!-- about page -->
-            <div class="about">
-
+            <div class="about" id="about">
+                <div class="about-header">
+                    <h1>About Me</h1>
+                </div>
+                <div class="about-content">
+                    <div class="about-content-text">
+                        <p>My name is Aminudin Muhibbullah<br><br>When I was a kid I always wonder how everything was made. And the thing 
+                            that really caught my attention was how computer or mobile works.
+                            "How is it made?", "How is it works?", "How is it transitioned from one to another?"
+                            And that curiosity stays on, and when I got into highschool I tried coding for the first time.
+                            And since then I developed a passion about coding, my path still undecisive, but I want to
+                            master mobile app developement. Why? Because come to think of it mobile is more likely has more users than computer.
+                            And I've been trying my best to be one!
+                        </p>
+                    </div>
+                    <div class = "about-content-image">
+                        <img src="aboutprofile0.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
